WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50264
[chromium] renderer does not realize hardware compositing is disabled and crashes
https://bugs.webkit.org/show_bug.cgi?id=50264
Summary
[chromium] renderer does not realize hardware compositing is disabled and cra...
Alexey Marinichev
Reported
2010-11-30 13:12:25 PST
[chromium] renderer does not realize hardware compositing is disabled and crashes
Attachments
Patch
(2.69 KB, patch)
2010-11-30 13:16 PST
,
Alexey Marinichev
jamesr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Marinichev
Comment 1
2010-11-30 13:16:25 PST
Created
attachment 75187
[details]
Patch
James Robinson
Comment 2
2010-11-30 13:23:00 PST
Comment on
attachment 75187
[details]
Patch R=me
Kenneth Russell
Comment 3
2010-12-01 15:56:15 PST
Landing this by hand because it looks like the commit queue is stalled due to redness in the tree, and we need to merge this for Chrome M9.
Kenneth Russell
Comment 4
2010-12-01 15:58:36 PST
Committed
r73079
: <
http://trac.webkit.org/changeset/73079
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug