2010-12-01  Alexey Marinichev  <amarinichev@chromium.org>

Reviewed by James Robinson.

        [chromium] renderer does not realize hardware compositing is disabled and crashes
        https://bugs.webkit.org/show_bug.cgi?id=50264

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::setRootGraphicsLayer): repaint always
        (WebKit::WebViewImpl::setIsAcceleratedCompositingActive): null check
        (WebKit::WebViewImpl::reallocateRenderer):


Canonical link: https://commits.webkit.org/63526@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73079 268f45cc-cd09-0410-ab3c-d52691b4dbfc